--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,5 +14,7 @@ log = "0.4.17"
 native-dialog = "0.6.3"
 nom = "7.1.1"
 pixels = "0.9.0"
+serde = { version = "1.0.138", features = ["derive"] }
+serde_yaml = "0.8.24"
 winit = "0.26.1"
 winit_input_helper = "0.12.0"
