--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,20 +1,4 @@
-[package]
-name = "ronald"
-version = "0.1.0"
-authors = ["Marc Dominik Migge <marcmigge@gmx.net>"]
-edition = "2021"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
-[dependencies]
-clap = "3.2.5"
-cpal = "0.14.0"
-env_logger = "0.9.0"
-log = "0.4.17"
-native-dialog = "0.6.3"
-nom = "7.1.1"
-pixels = "0.9.0"
-serde = { version = "1.0.138", features = ["derive"] }
-serde_yaml = "0.9.10"
-winit = "0.26.1"
-winit_input_helper = "0.13.0"
+[workspace]
+resolver = "2"
+members = ["core", "cli", "web/wasm"]
+default-members = ["core"]
