--- a/ronald-web/ronald-wasm/Cargo.toml
+++ b/ronald-web/ronald-wasm/Cargo.toml
@@ -10,8 +10,7 @@ crate-type = ["cdylib", "rlib"]
 
 [dependencies]
 console_error_panic_hook = "0.1.7"
-gloo = "0.8"
-gloo-timers = "0.2.4"
+js-sys = "0.3"
 ronald-core = { path = "../../ronald-core" }
 wasm-bindgen = "0.2"
 web-sys = { version = "0.3", features = ["CanvasRenderingContext2d", "HtmlCanvasElement", "ImageData"] }
