--- a/ronald-core/Cargo.toml
+++ b/ronald-core/Cargo.toml
@@ -2,6 +2,7 @@
 name = "ronald-core"
 version = "0.1.0"
 authors = ["Marc Dominik Migge <marcmigge@gmx.net>"]
+license = "MIT"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
