--- a/ronald-web/ronald-wasm/Cargo.toml
+++ b/ronald-web/ronald-wasm/Cargo.toml
@@ -11,7 +11,10 @@ crate-type = ["cdylib", "rlib"]
 
 [dependencies]
 console_error_panic_hook = "0.1.7"
+cpal = { version = "0.15.2", features = ["wasm-bindgen"] }
 js-sys = "0.3"
+log = "0.4"
 ronald-core = { path = "../../ronald-core" }
 wasm-bindgen = "0.2"
+wasm-logger = "0.2.0"
 web-sys = { version = "0.3", features = ["CanvasRenderingContext2d", "HtmlCanvasElement", "ImageData"] }
