--- a/ronald-web/package.json
+++ b/ronald-web/package.json
@@ -11,6 +11,9 @@
   },
   "license": "MIT",
   "devDependencies": {
+    "autoprefixer": "^10.4.15",
+    "postcss": "^8.4.28",
+    "tailwindcss": "^3.3.3",
     "typescript": "^4.8.2",
     "vite": "^3.0.9",
     "vite-plugin-rsw": "^2.0.11",
