--- a/ronald-core/Cargo.toml
+++ b/ronald-core/Cargo.toml
@@ -8,6 +8,9 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+deku = "0.16.0"
 log = "0.4.17"
 nom = "7.1.1"
 psg = "1.0.1"
+serde = { version = "1.0.188", features = ["derive"] }
+serde_json = "1.0.105"
