--- a/ronald-web/tsconfig.json
+++ b/ronald-web/tsconfig.json
@@ -8,8 +8,11 @@
     "esModuleInterop": true,
     "jsx": "preserve",
     "jsxImportSource": "solid-js",
-    "types": ["vite/client"],
+    "types": [
+      "vite/client"
+    ],
     "noEmit": true,
+    "resolveJsonModule": true,
     "isolatedModules": true
   }
 }
