Implement AudioSink for egui frontend

--- a/ronald-egui/Cargo.toml
+++ b/ronald-egui/Cargo.toml
@@ -13,3 +13,5 @@ eframe = { version = "0.31.1", default-features = false, features = [
   "x11",
 ] }
 serde = "1.0.219"
+cpal = "0.16.0"
+log = "0.4.27"
