--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,4 +1,11 @@
 [workspace]
 resolver = "2"
-members = ["ronald-core", "ronald-cli", "ronald-web/ronald-wasm", "ronald-egui", "ronald-desktop"]
+members = [
+  "ronald-core",
+  "ronald-cli",
+  "ronald-egui",
+  "ronald-desktop",
+  "ronald-legacy-web/ronald-wasm",
+  "ronald-web",
+]
 default-members = ["ronald-cli"]
