--- a/ronald-desktop/Cargo.toml
+++ b/ronald-desktop/Cargo.toml
@@ -15,3 +15,4 @@ eframe = { version = "0.31.1", default-features = false, features = [
 env_logger = "0.11.8"
 egui = "0.31.1"
 log = "0.4.27"
+anyhow = "1.0.98"
