Allow loading DSK images through Egui UI

--- a/ronald-egui/Cargo.toml
+++ b/ronald-egui/Cargo.toml
@@ -16,3 +16,5 @@ egui_extras = { version = "0.31.1", features = ["svg"] }
 serde = "1.0.219"
 cpal = "0.16.0"
 log = "0.4.27"
+rfd = "0.15.4"
+pollster = "0.4.0"
