--- a/ronald-egui/Cargo.toml
+++ b/ronald-egui/Cargo.toml
@@ -13,7 +13,8 @@ eframe = { version = "0.31.1", default-features = false, features = [
   "x11",
 ] }
 egui_extras = { version = "0.31.1", features = ["svg"] }
-serde = "1.0.219"
+serde = { version = "1.0.219", features = ["derive"] }
+serde_json = "1.0"
 cpal = "0.16.0"
 log = "0.4.27"
 rfd = "0.15.4"
