--- a/ronald-desktop/Cargo.toml
+++ b/ronald-desktop/Cargo.toml
@@ -5,7 +5,7 @@ edition = "2024"
 
 [dependencies]
 ronald-egui = { path = "../ronald-egui" }
-eframe = { version = "0.31.1", default-features = false, features = [
+eframe = { git = "https://github.com/mdm/egui.git", branch = "latest-patched", default-features = false, features = [
   "accesskit",
   "default_fonts",
   "persistence",
@@ -13,7 +13,7 @@ eframe = { version = "0.31.1", default-features = false, features = [
   "x11",
 ] }
 env_logger = "0.11.8"
-egui = "0.31.1"
+egui = { git = "https://github.com/mdm/egui.git", branch = "latest-patched" }
 log = "0.4.27"
 anyhow = "1.0.98"
 serde_json = "1.0.140"
