--- a/ronald-egui/Cargo.toml
+++ b/ronald-egui/Cargo.toml
@@ -5,14 +5,14 @@ edition = "2024"
 
 [dependencies]
 ronald-core = { path = "../ronald-core" }
-eframe = { version = "0.31.1", default-features = false, features = [
+eframe = { git = "https://github.com/mdm/egui.git", branch = "latest-patched", default-features = false, features = [
   "accesskit",
   "default_fonts",
   "persistence",
   "wgpu",
   "x11",
 ] }
-egui_extras = { version = "0.31.1", features = ["svg"] }
+egui_extras = { git = "https://github.com/mdm/egui.git", branch = "latest-patched", features = ["svg"] }
 serde = { version = "1.0.219", features = ["derive"] }
 serde_json = "1.0"
 cpal = "0.16.0"
