--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,7 @@
 resolver = "2"
 members = [
   "ronald-core",
-  "ronald-cli",
+  "ronald-legacy-pixels",
   "ronald-egui",
   "ronald-legacy-web/ronald-wasm",
 ]
