--- a/ronald-egui/Cargo.toml
+++ b/ronald-egui/Cargo.toml
@@ -16,6 +16,7 @@ log = "0.4.27"
 pollster = "0.4.0"
 rfd = "0.15.4"
 serde = { version = "1.0.219", features = ["derive"] }
+web-time = "1.1.0"
 
 # Native-only dependencies
 [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
@@ -45,5 +46,6 @@ web-sys = { version = "0.3", features = [
   "Document",
   "Element",
   "HtmlCanvasElement",
+  "XmlHttpRequest",
 ] }
 reqwest = { version = "0.12", default-features = false, features = ["json"] }
