--- a/ronald-egui/Cargo.toml
+++ b/ronald-egui/Cargo.toml
@@ -36,7 +36,7 @@ eframe = { git = "https://github.com/mdm/egui.git", branch = "latest-patched", d
   "accesskit",
   "default_fonts",
   "persistence",
-  "wgpu",
+  "glow",
 ] }
 wasm-bindgen = "0.2"
 wasm-bindgen-futures = "0.4"
