Revert "Make web version run without WebGpu"
This reverts commit de083c5d743239195d7d79490589a28738ed4697.

--- a/ronald-egui/Cargo.toml
+++ b/ronald-egui/Cargo.toml
@@ -36,7 +36,7 @@ eframe = { git = "https://github.com/mdm/egui.git", branch = "latest-patched", d
   "accesskit",
   "default_fonts",
   "persistence",
-  "glow",
+  "wgpu",
 ] }
 wasm-bindgen = "0.2"
 wasm-bindgen-futures = "0.4"
