--- a/ronald-egui/Cargo.toml
+++ b/ronald-egui/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2024"
 ronald-core = { path = "../ronald-core" }
 anyhow = "1.0.98"
 serde_json = "1.0"
-cpal = "0.16.0"
+cpal = { version = "0.16.0", features = ["wasm-bindgen"] }
 eframe = { git = "https://github.com/mdm/egui.git", branch = "latest-patched", default-features = false, features = [
   "accesskit",
   "default_fonts",
