Fix create metadata

--- a/ronald-egui/Cargo.toml
+++ b/ronald-egui/Cargo.toml
@@ -1,6 +1,8 @@
 [package]
 name = "ronald-egui"
-version = "0.1.0"
+version = "0.2.0"
+authors = ["Marc Dominik Migge <marcmigge@gmx.net>"]
+license = "MIT"
 edition = "2024"
 
 [dependencies]
