--- a/ronald-core/Cargo.toml
+++ b/ronald-core/Cargo.toml
@@ -14,3 +14,10 @@ nom = "7.1.1"
 psg = "1.0.1"
 serde = { version = "1.0.188", features = ["derive"] }
 serde_json = "1.0.105"
+
+[dev-dependencies]
+criterion = { version = "0.7.0", features = ["html_reports"] }
+
+[[bench]]
+name = "debug_event_throughput"
+harness = false
