--- a/ronald-core/Cargo.toml
+++ b/ronald-core/Cargo.toml
@@ -11,6 +11,7 @@ edition = "2021"
 deku = "0.16.0"
 log = "0.4.17"
 nom = "7.1.1"
+num_enum = { version = "0.7.5", features = ["complex-expressions"] }
 psg = "1.0.1"
 serde = { version = "1.0.188", features = ["derive"] }
 serde_json = "1.0.105"
