--- a/ronald-egui/Cargo.toml
+++ b/ronald-egui/Cargo.toml
@@ -48,4 +48,7 @@ web-sys = { version = "0.3", features = [
 
 [dev-dependencies]
 kittest = "0.2"
-egui_kittest = { git = "https://github.com/mdm/egui.git", branch = "latest-patched" }
+egui_kittest = { git = "https://github.com/mdm/egui.git", branch = "latest-patched", features = [
+  "snapshot",
+  "wgpu",
+] }
